[workspace]
members = [
    "egui_commonmark",
    "egui_commonmark_macros",
    "egui_commonmark_backend",
]

resolver = "2"


[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"                                        # Follows egui
version = "0.17.0"
repository = "https://github.com/lampsitter/egui_commonmark"

[workspace.dependencies]
egui_extras = { version = "0.28", default-features = false }
egui = { version = "0.28", default-features = false }

egui_commonmark_backend = { version = "0.17.0", path = "egui_commonmark_backend", default-features = false }
egui_commonmark_macros = { version = "0.17.0", path = "egui_commonmark_macros", default-features = false }

# To add features to documentation
document-features = { version = "0.2" }

pulldown-cmark = { version = "0.12", default-features = false }


[patch.crates-io]
# eframe = { git = "https://github.com/emilk/egui.git", rev = "cbb5d6aa936c7498214dba03b594fbe75dbe7488" }      # egui master 2024-06-05
# egui = { git = "https://github.com/emilk/egui.git", rev = "cbb5d6aa936c7498214dba03b594fbe75dbe7488" }        # egui master 2024-06-05
# egui_extras = { git = "https://github.com/emilk/egui.git", rev = "cbb5d6aa936c7498214dba03b594fbe75dbe7488" } # egui master 2024-06-05
