[workspace]
members = [
    "egui_commonmark",
    "egui_commonmark_macros",
    "egui_commonmark_backend",
]

resolver = "3"


[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"                                        # Follows egui
version = "0.20.0"
repository = "https://github.com/lampsitter/egui_commonmark"

[workspace.dependencies]
egui_extras = { version = "0.31", default-features = false }
egui = { version = "0.31", default-features = false }

egui_commonmark_backend = { version = "0.20.0", path = "egui_commonmark_backend", default-features = false }
egui_commonmark_macros = { version = "0.20.0", path = "egui_commonmark_macros", default-features = false }

# To add features to documentation
document-features = { version = "0.2" }

pulldown-cmark = { version = "0.13", default-features = false }


[patch.crates-io]
# eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
# egui = { git = "https://github.com/emilk/egui.git", branch = "master" }
# egui_extras = { git = "https://github.com/emilk/egui.git", branch = "master" }

# eframe = { path = "../../egui/crates/eframe" }
# egui = { path = "../../egui/crates/egui" }
# egui_extras = { path = "../../egui/crates/egui_extras" }
