[package]
name = "egui_commonmark"
authors = ["Erlend Walstad"]
version = "0.15.0"
edition = "2021"
description = "Commonmark viewer for egui"
keywords = ["commonmark", "egui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lampsitter/egui_commonmark"
documentation = "https://docs.rs/egui_commonmark"
include = ["**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]
rust-version = "1.76" # Required by egui

[dependencies]
egui_commonmark_shared = { path = "../egui_commonmark_shared" }
egui_commonmark_macros = { path = "../egui_commonmark_macros", optional = true }

egui_extras = { workspace = true }
egui = { workspace = true }

syntect = { version = "5.0.0", optional = true, default-features = false, features = [
    "default-fancy",
] }

document-features = { version = "0.2", optional = true }

comrak = { version = "0.22.0", default-features = false, optional = true }
pulldown-cmark = { version = "0.10", default-features = false, optional = true }

[features]
default = ["load-images", "pulldown_cmark"]

## Enable proc macros for compile time generation of egui widgets from markdowns
macro = ["dep:egui_commonmark_macros", "dep:pulldown-cmark"] # For simplicity it only support pulldown-cmark

pulldown_cmark = ["dep:pulldown-cmark", "egui_commonmark_shared/pulldown-cmark"]
comrak = ["dep:comrak"]
## Syntax highlighting for code blocks using syntect
better_syntax_highlighting = ["dep:syntect", "egui_commonmark_shared/better_syntax_highlighting"]

## Enable loading of images. Make sure to also opt in to what image format you need
## through the image crate.
load-images = ["egui_extras/image", "egui_extras/file"]

## Support loading svg images
svg = ["egui_extras/svg"]

## Images with urls will be downloaded and displayed
fetch = ["egui_extras/http"]

[dev-dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.24", default-features = false, features = ["png"] }
egui_commonmark_macros = { path = "../egui_commonmark_macros" }

[package.metadata.docs.rs]
features = ["better_syntax_highlighting", "document-features"]
