[package]
name = "egui_commonmark"
authors = ["Erlend Walstad"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Commonmark viewer for egui"
keywords = ["commonmark", "egui"]
categories = ["gui"]
readme = "README.md"
documentation = "https://docs.rs/egui_commonmark"
include = ["src/**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]

[dependencies]
egui_commonmark_backend = { workspace = true }
egui_commonmark_macros = { workspace = true, optional = true }

egui_extras = { workspace = true }
egui = { workspace = true }

document-features = { workspace = true, optional = true }

comrak = { version = "0.22.0", default-features = false, optional = true }
pulldown-cmark = { workspace = true, optional = true }

[features]
default = ["load-images", "pulldown_cmark"]

## Enable proc macros for compile time generation of egui widgets from markdown
macros = ["dep:egui_commonmark_macros", "dep:pulldown-cmark"] # For simplicity it only supports pulldown-cmark

## Builds upon the `macros` feature. Enables tracking of markdown files to recompile
## when their content changes. Uses nightly features
nightly = ["macros", "egui_commonmark_macros/nightly"]

# For internal debugging use only!
dump-macro = ["egui_commonmark_macros/dump-macro"]

pulldown_cmark = ["dep:pulldown-cmark", "egui_commonmark_backend/pulldown-cmark"]
comrak = ["dep:comrak"]
## Syntax highlighting for code blocks using syntect
better_syntax_highlighting = ["egui_commonmark_backend/better_syntax_highlighting"]

## Enable loading of images. Make sure to also opt in to what image format you need
## through the image crate.
load-images = ["egui_extras/image", "egui_extras/file"]

## Support loading svg images
svg = ["egui_extras/svg"]

## Images with urls will be downloaded and displayed
fetch = ["egui_extras/http"]

[dev-dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.25", default-features = false, features = ["png"] }
egui_commonmark_macros = { workspace = true } # Tests won't build otherswise

[package.metadata.docs.rs]
features = ["better_syntax_highlighting", "document-features", "macros"]
