[package]
name = "egui_commonmark_backend"
authors = ["Erlend Walstad"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Shared code for egui_commonmark and egui_commonmark_macros"
keywords = ["commonmark", "egui"]
categories = ["gui"]
readme = "README.md"
documentation = "https://docs.rs/egui_commonmark_backend"
include = ["**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]

[dependencies]
pulldown-cmark = { workspace = true }
egui_extras = { workspace = true }
egui = { workspace = true }


syntect = { version = "5.0.0", optional = true, default-features = false, features = [
    "default-fancy",
] }

[features]
better_syntax_highlighting = ["dep:syntect"]
