[package]
name = "egui_commonmark_macro"
authors = ["Erlend Walstad"]
version = "0.15.0"
edition = "2021"
description = "Embed markdown directly into the binary as egui widgets"
keywords = ["commonmark", "egui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lampsitter/egui_commonmark"
documentation = "https://docs.rs/egui_commonmark"
include = ["**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]
rust-version = "1.76" # Required by egui

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = { version = "1", default-features = false }
proc-macro2 = "1"

pulldown-cmark = { version = "0.10", default-features = false }

egui_commonmark = { path = "../egui_commonmark" }
egui = { workspace = true }

[features]
#! Internal Debugging tool only!
dump-macro = []
