[package]
name = "egui_commonmark_macros"
authors = ["Erlend Walstad"]
version = "0.15.0"
edition = "2021"
description = "Embed markdown directly into the binary as egui widgets"
keywords = ["commonmark", "egui"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lampsitter/egui_commonmark"
documentation = "https://docs.rs/egui_commonmark"
include = ["**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]
rust-version = "1.76" # Required by egui

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }

pulldown-cmark = { version = "0.10", default-features = false }

egui_commonmark_shared = { path = "../egui_commonmark_shared", features = ["pulldown-cmark"] }
egui = { workspace = true }

[dev-dependencies]
trybuild = "1.0"

[features]
#! Internal Debugging tool only!
dump-macro = []
