[package]
name = "egui_commonmark_macros"
authors = ["Erlend Walstad"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Embed markdown directly into the binary as egui widgets"
keywords = ["commonmark", "egui"]
categories = ["gui"]
readme = "README.md"
documentation = "https://docs.rs/egui_commonmark_macros"
include = ["**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]


[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }

pulldown-cmark = { version = "0.10", default-features = false }

egui_commonmark_shared = { workspace = true, features = ["pulldown-cmark"] }
egui = { workspace = true }

document-features = { workspace = true, optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
# Internal Debugging tool only!
dump-macro = []

## Enable tracking of markdown files to recompile when their content changes
nightly = []

[package.metadata.docs.rs]
features = ["document-features"]
